# ChatAgentDemo

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/api/: routes.py  websocket.py
backend/app/core/: agent_session.py  mcp_loader.py  session_manager.py
backend/app/models/: database.py  schemas.py
backend/app/services/: chat_store.py
backend/data/: mcp_servers.example.json
frontend/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  MarkdownRenderer.tsx  ToolUseCard.tsx
frontend/src/components/sidebar/: ChatSearchDialog.tsx  ChatSidebar.tsx
frontend/src/hooks/: useChat.ts  useChatList.ts  useConnection.ts  useTheme.ts
frontend/src/services/: api.ts
